# ovq

./: Cargo.toml
.github/workflows/: release.yml
src/: frontmatter.rs  main.rs  values.rs  vault.rs
src/query/: ast.rs  eval.rs  mod.rs  parser.rs
