[package]
name = "ovq"
version = "0.1.0"
edition = "2021"
description = "Query Obsidian vault files by frontmatter properties"
license = "MIT"
repository = "https://github.com/pkarpovich/ovq"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ignore = "0.4"
walkdir = "2"
